Add user api operations
